parámetros para ejemplmplos. Generalización de asignación de parámetros

--- a/src/main/webapp/mixture.xhtml
+++ b/src/main/webapp/mixture.xhtml
@@ -59,7 +59,7 @@
 			</f:ajax>
 				<br/>
 				<br/>
-			<h:commandButton action="#{setParameters.clean()}" value="Asignar valores de parámetros binarios" />
+			<h:commandButton action="#{createMixture.prepareParameters()}" value="Asignar valores de parámetros binarios" />
 				<br/>
 				<br/>
 			
