--- a/src/main/webapp/parameters.xhtml
+++ b/src/main/webapp/parameters.xhtml
@@ -4,33 +4,16 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:emcomp="http://xmlns.jcp.org/jsf/composite/emcomp"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      >
 
 	<ui:composition template="template.xhtml">
 		<ui:define name="content">
-		
+		<h:form>
 			<h2>Parámetros</h2>
-			<h:form>
-			
-			<c:if test="#{setParameters.isVDWMixingRule()}">
-				<emcomp:mixtureParameters modelList ="#{setParameters.vanDerWaals}" name="k"/>
-			</c:if>
-			<c:if test="#{setParameters.isExcessGibbsBasedMixingRule()}">
-				<emcomp:mixtureParameters modelList="#{setParameters.activityModel_A}" name="A"/>
-				<emcomp:mixtureParameters modelList="#{setParameters.activityModel_B}" name="B"/>
-				<c:if test="#{setParameters.isWongSandlerMixingRule()}">
-					<emcomp:mixtureParameters modelList ="#{setParameters.wongSandler_b}" name="k"/>	
-				</c:if>	
-				<c:if test="#{setParameters.isNRTLActivityModel()}">
-					
-					
-					 <emcomp:mixtureParameters modelList="#{setParameters.nrtl_alpha}" name="alfa"/>
-				</c:if>						
-			</c:if>
-			
-			<h:commandButton action="#{setParameters.save()}" value="Aceptar"  />
+			<emcomp:parameters setParameters="#{createMixture.setParameters}"/>
+			<h:commandLink action="mixture" value="Regresar" />
 			<h:messages />
-			</h:form>
+		</h:form>
 		</ui:define>
 	</ui:composition>
 </html>
