vdw2p re-arranged

--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -28,6 +28,9 @@
 						<h:commandLink value="Van Der Waals" action="#{bookExamples.vdwDemos()}" target="main"/>
 					</li>
 					<li>
+						<h:commandLink value="Van Der Waals 2 Parámetros" action="#{bookExamples.twoParameterVDW()}" target="main"/>
+					</li>
+					<li>
 						<h:commandLink value="Huron Vidal" action="#{bookExamples.hvoDemos()}" target="main"/>
 					</li>
 					<li>
