--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -34,6 +34,9 @@
 						<h:commandLink value="Huron Vidal" action="#{bookExamples.hvoDemos()}" target="main"/>
 					</li>
 					<li>
+						<h:commandLink value="hvos,mhv2,mhv1,lcvm" action="#{bookExamples.hvos_mhv2_mhv1_lcvm()}" target="main"/>
+					</li>
+					<li>
 						<h:commandLink value="Wong Sandler" action="#{bookExamples.wsDemos()}" target="main"/>
 					</li>
 				</ul>
