--- a/src/main/webapp/resources/emcomp/pointLineProperties.xhtml
+++ b/src/main/webapp/resources/emcomp/pointLineProperties.xhtml
@@ -52,6 +52,12 @@
              			</f:facet>
              			<h:inputText value="#{line.NForCalculation}"/>
              		</h:column>
+             		<!-- <h:column>
+             			<f:facet name="header">
+             				<h:outputText value="" />
+             			</f:facet>
+             			<h:commandButton value="Estimar" action="{cc.attrs.bookexample.estimate(line)}"/>
+             		</h:column> -->
              		
              	</h:dataTable>
              	
